# opine

./: .gitignore  .vars.ini  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
opine/: main.py  metadata.py  setup_and_metadata.py  types.py
opine/suggestions/: __init__.py  move_coverage_ini.py  move_setup_py_to_declarative.py  move_setup_requires.py  move_tox_ini.py
opine/suggestions/tests/: __init__.py  move_setup_py_to_declarative.py  move_setup_requires.py
opine/tests/: __init__.py  __main__.py  functional.py  metadata.py  setup_and_metadata.py  types.py
