[metadata]
name = opine
description = An opinionated linter for python packaging
long_description = file: README.md
long_description_content_Type = text/markdown
license = Apache2
url = https://github.com/thatch/opine
author = Tim Hatch
author_email = tim@timhatch.com
classifiers =
    Development Status :: 1 - Planning

[options]
packages = opine
