[metadata]
name = opine
description = An opinionated linter for python packaging
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/opine/
author = Tim Hatch
author_email = tim@timhatch.com
classifiers =
    Development Status :: 4 - Beta

[options]
packages = find:
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.6
install_requires =
  dowsing>=0.5.0
  libcst>=0.3.2
  pkginfo>=1.5.0.1
  imperfect>=0.2.0
  moreorless>=0.3.0
  tomlkit>=0.5.0

[options.entry_points]
console_scripts =
  opine = opine.__main__

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = opine/*
omit = opine/tests/*

[coverage:report]
fail_under = 90
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py36, py37, py37-minimal, py38

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{36,37,38}: COVERAGE_FILE={envdir}/.coverage

[testenv:py37-minimal]
deps =
changedir = /
commands =
    python -m opine.tests

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
