[metadata]
name = opine
description = An opinionated linter for python packaging
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/opine/
author = Tim Hatch
author_email = tim@timhatch.com
classifiers =
    Development Status :: 4 - Beta

[options]
packages = find:
setup_requires =
    setuptools_scm >= 8
    setuptools >= 38.3.0
python_requires = >=3.8
install_requires =
  dowsing>=0.5.0
  libcst>=1.0
  pkginfo>=1.5.0.1
  imperfect>=0.2.0
  moreorless>=0.3.0
  tomlkit>=0.5.0

[options.entry_points]
console_scripts =
  opine = opine.main:main

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = opine/*
omit = opine/tests/*

[coverage:report]
fail_under = 90
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py38-minimal, py38, py39, py310, py311, py312

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py3*: COVERAGE_FILE={envdir}/.coverage

[testenv:py38-minimal]
deps =
changedir = /
commands =
    python -m opine.tests

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
